# LoLClientApi-RS

./: Cargo.toml  LICENSE  README.md
src/: blocking.rs  client.rs  lib.rs  shared.rs
src/types/: lol_champ_select.rs  lol_champions.rs  lol_chat.rs  lol_heartbeat.rs  lol_summoner.rs  mod.rs
tests/: blocking.rs  client.rs
