[package]
name = "lolclientapi_rs"
version = "0.1.0"
authors = ["Guido30"]
license = "MIT"
repository = "https://github.com/Guido30/LoLClientApi-RS"
edition = "2024"

[dependencies]
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
base64 = "0.22"
serde_with = "3.14.0"
